Add Weight tracker

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
